--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 						<suiteXmlFile>./testng.xml</suiteXmlFile>
 						
 					</suiteXmlFiles>
-					<groups>unit,anup</groups>
+					
 				</configuration>
 			</plugin>
 
@@ -27,6 +27,14 @@
 	</build>
 	
 	<dependencies>
+
+	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+	    
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
@@ -42,7 +50,5 @@
 			<version>6.14.3</version>
 		</dependency>
 	</dependencies>
-
-
 
 </project>
