--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # Define root logger
-log4j.rootLogger=debug,console,file
+log4j.rootLogger=error,console,file
 
 # Define the appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
